--- a/Portafolio/Portafolio/Views/Shared/_Layout.cshtml
+++ b/Portafolio/Portafolio/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Portafolio.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true"/>
 </head>
 <body>
     <header>
@@ -32,7 +33,9 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            
             @RenderBody()
+           
         </main>
     </div>
 
