--- a/Portafolio/Portafolio/Views/Home/Index.cshtml
+++ b/Portafolio/Portafolio/Views/Home/Index.cshtml
@@ -1,15 +1,15 @@
-﻿@model Persona
+﻿@model HomeIndexViewModel
 
 
 @{
     ViewData["Title"] = "Home Page";
+
 }
 
-<div class="text-center">
-    <h1 class="display-4"> @Model.Nombre @ViewBag.Nombre (@Model.Edad)</h1>
-    <h2>Desarrolador full stack especializado en tecnologias .NET y Javascript</h2>
+<partial name="_Presentacion" />
 
-    <img
-        id="foto"
-        src="./Imagenes/Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="Foto Luis Bayro" />
-</div>
+
+<partial name="_habilidades" />
+
+
+<partial name="_SeccionProyectos" model="Model.Proyectos"/>
